icescrum_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: icescrum
  name: icescrumservice
  namespace: icescrum
spec:
  clusterIP: 172.30.141.71
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: icescrum
    deploymentconfig: icescrum
  sessionAffinity: None
  type: ClusterIP
