icescrum_route.yml
apiVersion: v1
kind: Route
metadata:
  name: icescrumroute
  namespace: icescrum
spec:
  to:
    kind: Service
    name: icescrumservice
